[tool.poetry]
name = "subby"
version = "0.2.9"
description = "Advanced subtitle converter and processor"
authors = ["vevv"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/vevv/subby"

[tool.poetry.dependencies]
python = "^3.8"
pymp4 = "~1.4.0"
beautifulsoup4 = "^4.11.2"
tinycss = "^0.4"
click = "^8.1.3"
srt = "^3.5.3"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"


[tool.poetry.scripts]
subby = "subby.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
