[project]
name = "subby"
version = "0.3.26"
description = "Advanced subtitle converter and processor"
authors = [{name = "vevv"}]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/vevv/subby"
requires-python = ">=3.9,<4.0"

dependencies = [
    "pymp4 (~=1.4.0)",
    "beautifulsoup4 (>=4.11.2)",
    "tinycss (>=0.4)",
    "click (>=8.1.3)",
    "srt (>=3.5.3)",
    "lxml (>=5.3.0,>=6.0.0)",
    "langcodes (>=3.4.0)",
    "ftfy (>=6.3.1,<7.0.0)",
]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
lxml-stubs = "^0.5.1"


[project.scripts]
subby = "subby.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
